[tool.poetry]
name = "robot-framework"
version = "0.1.0"
description = ""
authors = ["Ahmad Malik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.0"
robotframework-browser = "^18.2.0"
robotframework-requests = "^0.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
